--- a/main_updated_resutls.ipynb
+++ b/main_updated_resutls.ipynb
@@ -1808,6 +1808,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "hist1_loss_valus = 3.3928637504577637\n",
+    "hist2_loss_valus = 3.237685203552246\n",
+    "hist3_loss_valus = 3.3301827907562256\n",
+    "hist4_loss_valus = 3.5032081604003906"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2:  Sensitivity to batch sizes"
    ]
   },
