--- a/main_updated_results.ipynb
+++ b/main_updated_results.ipynb
@@ -2211,6 +2211,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BN2_loss_valus = 4.2391349627793469\n",
+    "BN4_loss_valus = 4.1471209534762846\n",
+    "BN8_loss_valus = 4.0623523151246887\n",
+    "BN16_loss_valus = 4.0235621923436256\n",
+    "bN32_loss_valus = 4.1267457452563464"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2572,6 +2585,19 @@
    ],
    "source": [
     "plot_history_diff_BS(hists, name='GN ', attribute='val_loss', axis=(-1,11,3.5,6), loc='lower right')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GN2_loss_valus = 3.8312234674357450\n",
+    "GN4_loss_valus = 3.9044843468346833\n",
+    "GN8_loss_valus = 3.8677304538630346\n",
+    "GN16_loss_valus = 3.7763358564646890\n",
+    "GN32_loss_valus = 3.8826543466880855"
    ]
   }
  ],
